# vla-foundations

./: .continueignore  .gitignore  APACHE_CONFIG.md  API_SETUP.md  AuditNotes.md  AuditNotes.mdx  BEFORE_AFTER.md  DEPLOYMENT_SUCCESS.md  HARDENING_COMPLETE.md  INSTRUCTOR.md  INSTRUCTOR_GUIDE.md  PRIVATE_OPERATIONS.md  PRIVATE_REPO_SETUP.md  QUICK_REFERENCE.md  QUICK_START_SSH.md  README.md  REFACTOR_SUMMARY.md  REVIEW_SYSTEM.md  SETUP_COMPLETE.md  SETUP_WITH_GH_CLI.md  SYSTEM_COMPLETE.md  claude.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pr.txt  pyproject.toml  pytest.ini  tailwind.config.ts  vercel.json
.claude/commands/: generate-fixtures.md  grade.md  new-assignment.md  pre-flight.md  release.md  sync-check.md  test-rigor.md
.claude/skills/: README.md
.github/workflows/: audit-preview.yml  deploy-staging.yml  deploy.yml  refresh-reviewer-data.yml  shadow-tester.yml  sync-to-public.yml  vla-audit.yml
api-server/: .htaccess  package.json  server.js
app/: globals.css  layout.tsx  page.tsx
app/contributors/: page.tsx
app/course/: page.tsx
app/reference/: page.tsx
app/textbook/: page.tsx
components/: KatexStyles.tsx
components/audit/: AuditLayout.tsx  CommentSidebar.tsx
components/textbook/: Sidebar.tsx  TextbookLayout.tsx
content/contributors/: Hhy903.mdx  Soorej30.mdx  Zaaler.mdx  _template.mdx  antony-zhao.mdx  aritrach.mdx  cKohl10.mdx  callie-jones.mdx  christoffer-heckman.mdx  gyanigk.mdx  himanshugupta1009.mdx  jdvakil.mdx  jt7347.mdx  kalhamilton.mdx  lorinachey.mdx  melissa-krusniak.mdx  tr0612.mdx  yi-shiuan-tung.mdx  yuni-wyx.mdx  (+1 more)
data/: reviewer-stats.json
grading_reports/: GRADING_REPORT.md  PR_34_private.md  PR_34_public.md  PR_35_private.md  PR_36_private.md  PR_36_public.md  PR_37_private.md  PR_37_public.md  PR_38_private.md  PR_39_private.md  PR_40_private.md  PR_41_private.md  PR_41_public.md  PR_42_private.md  PR_42_public.md  PR_45_private.md  PR_46_private.md  PR_46_public.md  PR_47_private.md  PR_47_public.md  PR_49_private.md  PR_50_private.md  PR_50_public.md  PR_51_private.md  PR_53_private.md  PR_59_private.md  PR_59_public.md
lib/: audits.ts  chapters.ts
private/: README.md  training_log.txt  training_report.md  training_run.py
scripts/: README.md  _sanitize_todos.py  audit_linter.py  collect_reviewer_data.py  dev_utils.py  grade_scratch1.py  manage_solutions.py  review-prs.sh  sanitize.sh  setup_private_repo.sh
tests/: README.md  __init__.py  conftest.py
(+10846 files in other folders)
